[gd_scene load_steps=14 format=3 uid="uid://babocisvslxfa"]

[ext_resource type="Script" uid="uid://4m5fotean0lk" path="res://card/card_view.gd" id="1_po74q"]
[ext_resource type="Script" uid="uid://dstwl21wp2qw1" path="res://card/card_3d.gd" id="2_ea53f"]
[ext_resource type="Texture2D" uid="uid://2hdiifnn1ape" path="res://card/assets/card_ghost_base.png" id="3_l1qfo"]
[ext_resource type="Texture2D" uid="uid://dc6f5p5t31hmh" path="res://card/assets/card_banner.png" id="4_r6t3b"]
[ext_resource type="Texture2D" uid="uid://du3gbqisqsfvo" path="res://card/assets/card_mount.png" id="5_rbpd2"]
[ext_resource type="Texture2D" uid="uid://b0xl8q6iiecp7" path="res://card/assets/card_description.png" id="6_td3it"]
[ext_resource type="Texture2D" uid="uid://d4hknl182a46m" path="res://card/assets/card_ink.png" id="7_hqvqk"]
[ext_resource type="Texture2D" uid="uid://c7wv11e56a5cn" path="res://card/assets/card_health.png" id="8_rnhns"]
[ext_resource type="Texture2D" uid="uid://tevmavp3dyox" path="res://card/assets/card_ghost_portrait_zephyr.png" id="9_ns8ee"]

[sub_resource type="ViewportTexture" id="ViewportTexture_po74q"]
viewport_path = NodePath("Viewport3D")

[sub_resource type="Animation" id="Animation_03v04"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RotationContainer:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_l03i2"]
resource_name = "examine_oscillate"
length = 8.0
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RotationContainer:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(2, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.05235988, -0.17453292, 0), Vector3(-0.05235988, 0.17453292, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_03v04"]
_data = {
&"RESET": SubResource("Animation_03v04"),
&"examine_oscillate": SubResource("Animation_l03i2")
}

[node name="CardView" type="Node2D"]
script = ExtResource("1_po74q")

[node name="Node2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = SubResource("ViewportTexture_po74q")

[node name="MouseArea" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MouseArea"]
polygon = PackedVector2Array(-104, 152, -104, -120, -48, -167, 48, -167, 104, -120, 104, 152)

[node name="Viewport3D" type="SubViewport" parent="."]
transparent_bg = true
handle_input_locally = false
physics_object_picking = true
size = Vector2i(1920, 1080)

[node name="Card3D" type="Node3D" parent="Viewport3D"]
script = ExtResource("2_ea53f")

[node name="RotationContainer" type="Node3D" parent="Viewport3D/Card3D"]

[node name="Base" type="Sprite3D" parent="Viewport3D/Card3D/RotationContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.6311753e-09, -0.6200094, -1.287704)
texture = ExtResource("3_l1qfo")

[node name="Banner" type="Sprite3D" parent="Viewport3D/Card3D/RotationContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.2444588e-09, -0.6200094, -0.43657804)
texture = ExtResource("4_r6t3b")

[node name="Mount" type="Sprite3D" parent="Viewport3D/Card3D/RotationContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.6311753e-09, -0.6200094, -1.1263897)
texture = ExtResource("5_rbpd2")

[node name="Plaque" type="Sprite3D" parent="Viewport3D/Card3D/RotationContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.6311753e-09, -0.6200094, -1.0420225)
texture = ExtResource("6_td3it")

[node name="InkIcon" type="Sprite3D" parent="Viewport3D/Card3D/RotationContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.6311753e-09, -0.6200094, -0.887704)
texture = ExtResource("7_hqvqk")

[node name="HealthIcon" type="Sprite3D" parent="Viewport3D/Card3D/RotationContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.6311753e-09, -0.6200094, -0.887704)
texture = ExtResource("8_rnhns")

[node name="Portrait" type="Sprite3D" parent="Viewport3D/Card3D/RotationContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.6440964e-09, -0.6200094, -0.7382262)
texture = ExtResource("9_ns8ee")

[node name="Title" type="Label3D" parent="Viewport3D/Card3D/RotationContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.2444588e-09, 2.0131369, -0.3919971)
pixel_size = 0.02
no_depth_test = true
render_priority = 1
modulate = Color(0.28118682, 0.28118688, 0.28118682, 1)
outline_modulate = Color(0, 0, 0, 0)
text = "Test Card Label"
font_size = 42

[node name="Camera" type="Camera3D" parent="Viewport3D/Card3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 13.065447)
fov = 90.0
size = 28.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Viewport3D/Card3D"]
libraries = {
&"": SubResource("AnimationLibrary_03v04")
}
